--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
 }
@@ -8,4 +8,4 @@ body {
     margin: 0;    
     padding: 0;
     background-color: rgb(255, 255, 255);
-}
+} */
