--- a/src/components/main/Article/styles.module.css
+++ b/src/components/main/Article/styles.module.css
@@ -1,4 +1,4 @@
-.root {
+/* .root {
     display: flex;
     flex-direction: column;
     background-color: rgb(255, 255, 255);
@@ -7,17 +7,17 @@
 h1 {
     color: red;
     margin: 5px 0 5px 5px;
-}
+} */
 
 /* h3 {
     margin: 15px;
 } */
 
-li { 
+/* li { 
     list-style-type: none;
     margin: 5px;
 }
 
 a {
     text-decoration: none;
-} 
+}  */
