--- a/client/src/components/header/Search/styles.module.css
+++ b/client/src/components/header/Search/styles.module.css
@@ -2,3 +2,48 @@
     height: 100px;
     background-color: rgb(54, 127, 255);
 } */
+
+.search_form {
+    margin-bottom: 5px;
+    width: 350px;
+    height: 40px;
+    position: relative;
+}
+
+.autocomplite {
+    position: absolute;
+    left: 0;
+    top: 70px;
+    width: 100%;
+    background: white;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.15);
+    z-index: 101;
+    max-height: 240px;
+    height: auto;
+    overflow: auto;
+}
+
+.autocomplite_item {
+    padding: 10px;
+    color: black;
+    cursor: pointer;
+    transition: cubic-bezier(1, 0, 0, 1) .3s all;
+}
+
+.autocomplite_item:hover {
+    background: rgb(163, 163, 163);
+}
+
+.search_input {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.15);
+    border: none;
+    outline: none;
+}
